--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   file_picker:
   sqflite:
   custom_pop_up_menu: ^1.2.4
+  record: ^4.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
