--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   video_player:
   path_provider:
   just_audio:
+  video_thumbnail: ^0.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
