--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   audioplayers:
   open_file: ^3.2.1
   url_launcher:
+  photo_view:
 dev_dependencies:
   flutter_test:
     sdk: flutter
